Fixed all spacing to mimic FIGMA mockup on PropertyPage

--- a/shinyproject/src/components/Header.scss
+++ b/shinyproject/src/components/Header.scss
@@ -1,6 +1,6 @@
 header {
     background-color: white;
-    padding: 0.5rem 1.5rem;
+    padding: 0.5rem 2rem;
     margin-top: 5%;
     margin-bottom: 50px;
 }
@@ -21,22 +21,17 @@ nav ul {
     list-style-type: none;
     display: flex;
     justify-content: flex-end;
-    // margin: 10px;
-    // padding: 10px;
-    // gap: 50px;
     overflow: hidden;
     background-color: white;
 }
 nav ul li {
     margin: 0;
-    // padding: 0;
 }
 nav ul li a {
     display: block;
     color:black;
     font-size: 24px;
     text-align: center;
-    // padding: 14px 16px;
     text-decoration: none;
 }
 nav ul li a:hover {
