--- a/shinyproject/src/pages/PropertyPage.scss
+++ b/shinyproject/src/pages/PropertyPage.scss
@@ -1,5 +1,4 @@
 .property-page {
-  /* padding: 20px; */
   width: 100%;
 }
 .property-carousel {
@@ -46,12 +45,8 @@ h4 {
   border: none;
   color: rgb(8, 8, 8) !important;
   font-size: 100px !important;
-  /* width: 50px;
-  height: 50px;
-  opacity: 0.8; */
   z-index: 9999;
   cursor: pointer;
-  /* /transition: opacity 0.3s ease, transform 0.3s ease; */
 }
 .carousel .control-next.control-arrow {
     right: 20px;
@@ -70,12 +65,6 @@ h4 {
     align-items: center;
     justify-content: center;
 }
-/* .carousel .slider {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-} */
 .carousel .slide {
     display: flex !important;
     align-items: center !important;
@@ -89,8 +78,8 @@ h4 {
 }
 .property-info {
   margin-top: 20px;
-  margin-right: 20px;
-  margin-left: 20px;
+  margin-right: 15px;
+  margin-left: 15px;
 }
   .main-info {
   display: flex;
@@ -122,10 +111,9 @@ h4 {
   display: flex;
   flex-direction: row;
   align-items: flex-end;
-  margin-top: 20px;
-}
+  }
 .host {
-        color: #ff6060;
+   color: #ff6060;
 }
 .host-photo {
     width: 100px;
@@ -148,7 +136,7 @@ h4 {
     flex-direction: row;
 }
 .collapsible-section {
-  margin: 40px  40px 10px 30px;
+  margin: 40px  30px 10px 30px;
   display: flex;
   flex-direction: column;
   width: 50%;
@@ -181,8 +169,8 @@ h4 {
   transform: rotate(180deg);
 }
 .collapsible-content ul {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
   list-style-type: none;
   padding: 0px;
   gap: 5px;
